@@ -317,6 +317,7 @@ message.bounceMessage.title=Bounce to addresses
 info.UIDFolder.synchronizing.of=of
 info.UIDFolder.synchronizing.messages=messages
 info.UIDFolder.synchronizing.loadingMessages=Loading
+info.UIDFolder.synchronizing.cachingMessages=Caching
 info.UIDFolder.synchronizing.fetchingMessages=Fetching
 info.UIDFolder.synchronizing.removingMessages=Removing
 info.UIDFolder.synchronizing.writingChanges=Writing local changes to server
